Add new fields and functionalities to the income feature
