# src/main/java/com/grglucastr/homeincapi/controller/v2/IncomeController.java
@@ -14,6 +14,7 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.math.BigDecimal;
+import java.time.LocalDate;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
@@ -58,5 +59,45 @@ public class IncomeController implements IncomesApi {
         final IncomeSumResponse incomeSumResponse = new IncomeSumResponse();
         incomeSumResponse.setTotal(sum.orElse(BigDecimal.ZERO));
         return ResponseEntity.ok(incomeSumResponse);
+    }
+
+    @Override
+    public ResponseEntity<IncomeResponse> getIncomeById(Long incomeId) {
+        final Optional<Income> income = incomeService.findById(incomeId);
+        if(income.isEmpty())
+            return ResponseEntity.notFound().build();
+
+        return ResponseEntity.ok(mapper.map(income.get(), IncomeResponse.class));
+    }
+
+    @Override
+    public ResponseEntity<IncomeResponse> updateIncome(Long incomeId, IncomeRequest incomeRequest) {
+        final Optional<Income> income = incomeService.findById(incomeId);
+        if(income.isEmpty())
+            return ResponseEntity.notFound().build();
+
+        final Income updateIncome = mapper.map(incomeRequest, Income.class);
+        updateIncome.setId(incomeId);
+        updateIncome.setUpdateDate(LocalDate.now());
+        updateIncome.setInsertDate(income.get().getInsertDate());
+
+        return ResponseEntity.ok(mapper.map(incomeService.save(updateIncome), IncomeResponse.class));
+    }
+
+    @Override
+    public ResponseEntity<Void> deleteIncome(Long incomeId) {
+
+        final Optional<Income> optIncome = incomeService.findById(incomeId);
+        if(optIncome.isEmpty())
+            return ResponseEntity.notFound().build();
+
+        final Income income = optIncome.get();
+        income.setId(incomeId);
+        income.setActive(false);
+        income.setUpdateDate(LocalDate.now());
+
+        incomeService.save(income);
+
+        return ResponseEntity.noContent().build();
     }
 }
